# leadscraper

./: .env.example  .gitignore  APIFY_NOTES.md  Dockerfile  PROMPT_FOR_CODEX.md  README.md  cli.py  http.py  pyproject.toml  requirements.txt  scoring.py  sources.yaml
.github/workflows/: weekly-leads.yml
bbb_lead_scraper/: cli.py  geography.py  google_places.py  normalize.py  scoring.py
bbb_lead_scraper/sources/: chamber_growthzone.py  local_file.py
config/: sources.yaml
sources/: __init__.py  socrata.py
tests/: test_chamber_parser.py  test_normalize.py
