[project]
name = "bbb-lead-scraper"
version = "0.1.0"
description = "Recurring lead collection and scoring for Bay Area BBB sales prospecting."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "BBB Lead Engine" }]
dependencies = [
  "requests>=2.31.0",
  "pandas>=2.1.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0",
  "PyYAML>=6.0.1",
  "python-dotenv>=1.0.0",
  "tenacity>=8.2.3",
  "openpyxl>=3.1.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.4.0"]
playwright = ["playwright>=1.44.0"]

[project.scripts]
bbb-leads = "bbb_lead_scraper.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
